--- a/HTML-PC/app/template/main.html
+++ b/HTML-PC/app/template/main.html
@@ -29,7 +29,7 @@
                         <div class="main-menu">
                             <ul class="nav">
                                 <li>
-                                    <a class="logo" title="new-ca" href="#"><img class="logo-dark" src="images/graphics/logo.svg" alt=""><img class="logo-white" src="images/graphics/logo-white.svg" alt=""></a>
+                                    <a class="logo" title="new-ca" href="#"><img class="logo-dark" src="images/graphics/logo.png" alt=""><img class="logo-white" src="images/graphics/logo-white.png" alt=""></a>
                                 </li>
                                 <li class="active">
                                     <a href="#">Tìm việc</a>
@@ -65,11 +65,43 @@
     </section>
 
     <!-- build:content -->
-    <div class="overlay"></div>
+    
     <!--Footer-->
     <footer class="footer">
         <div class="container">
-
+            <div class="row">
+                <div class="col-md-4">
+                    <a class="logo" title="new-ca" href="#"><img src="images/graphics/logo.png" alt=""></a>
+                    <div class="mb40">Mang việc làm và ưu đãi hấp dẫn đến cho Recer và Ứng viên</div>
+                    <div class="social flex">
+                        <a href=""><img src="images/icons/icon-face.png" alt=""></a>
+                        <a href=""><img src="images/icons/icon-zalo.png" alt=""></a>
+                        <a href=""><img src="images/icons/icon-in.png" alt=""></a>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h3 class="title">About Us</h3>
+                            <ul>
+                                <li><a href="#">Introduction</a></li>
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">Recruitment Posting</a></li>
+                                <li><a href="#">Search Profiles</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <h3 class="title">Partners</h3>
+                            <ul>
+                                <li><a href="#">Headhunter Operation Mechanism </a></li>
+                                <li><a href="#">Recruiter Operation Mechanism</a></li>
+                                <li><a href="#">Other Products and Services</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
     <!--End Footer-->
@@ -77,11 +109,13 @@
     <a href="javascript:;" id="to_top">
         <i class="fa fa-long-arrow-up"></i>
     </a>
-
+    <div class="overlay"></div>
     <!--Jquery lib-->
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="js/swiper.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="js/aos.js"></script>
+    <script type="text/javascript" src="js/numscroller-1.0.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <!-- build:script -->
     <!-- build:script2 -->
