--- a/HTML-PC/css/scss/_swiper.scss
+++ b/HTML-PC/css/scss/_swiper.scss
@@ -177,9 +177,7 @@
 
 .swiper-button-prev,
 .swiper-button-next {
-  background: #FFFFFF;
-  border: 1px solid #ECECEC;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+  background: url(images/icons/next.png);
   position: absolute;
   top: 50%;
   margin-top: -20px;
@@ -198,7 +196,9 @@
     height: 25px;
   }
 }
-
+.swiper-button-prev{
+  transform: rotate(180deg);
+}
 .swiper-button-prev.swiper-button-disabled,
 .swiper-button-next.swiper-button-disabled {
   opacity: 0.35;
@@ -208,13 +208,13 @@
 
 .swiper-button-prev,
 .swiper-container-rtl .swiper-button-next {
-  left: 0px;
+  left: -50px;
   right: auto;
 }
 
 .swiper-button-next,
 .swiper-container-rtl .swiper-button-prev {
-  right: 0px;
+  right: -50px;
   left: auto;
 }
 
